tests/specs/ecosystem/sftsrv/structured_html/0_0_1.test
sftsrv/structured-html/0.0.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'Element'.
export const convertHtmlToBlocks = (html: Element): EditorContent =>({} as never);
                                          ~~~~~~~
    at file://<tmpdir>/src/index.ts:2:43

